--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,17 @@
 
+most of the largest merges are from Young to Other(0).  need
+to be more careful about how much we merge from Young at
+one time.
+
 so a new leaf can't squeeze between two parents anymore.
 what does this mean for the merge problem where we had
 parent nodes underfull and depth increasing to the right?
+
+removing the rewrite_level (which should be rewrite_depth)
+code now shows that the depth increasing to the right
+problem is mostly better, but perhaps not entirely.
+the 5M url test doesn't show it unless the consecutive
+nodes for recycle setting for depth 1 is at 1 instead of 2.
 
 saw cases where the page count in the parent page looks 
 wrong.  zero.
