change merge from fresh to work in one of two ways.  single leaves are rewritten and bunched together.  anything with depth 1 or more is simply promoted to young without rewrite.
write_merge now allows behind to be optional.  so that merge
from fresh doesn't need to use it, because the only case where a
tombstone would be dropped during that kind of merge is when something
was committed and then immediately deleted before merge could move
it up.

when choosing something from one segment to promote to the next
level, allow the promotion of more than one page.  specifically,
the previous code would only allow promotion of a single leaf or
a single node of depth 1.  now we can promote multiple leaves (or
I suppose multiple nodes of depth higher) as long as the leaves
are contiguous children of the same parent node.  this required
MultiPageCursor to be used instead of PageCursor, which is fine,
as there should be no perf penalty for the case where MultiPageCursor
actually has just one page in it.

change merge from Young to be like merge from N to N+1.  instead
of always merging a whole segment regardless of size, choose a
set of (leaves) to promote.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,17 @@
 
+idea:  what about cases where we have lots of tombstones
+but are not in a needs_merge state?  we want to get rid
+of them anyway...
+
+why do we have so many cases where any_node shows only
+1 (or just a few) children to choose from when promoting?
+
+why is the number of keys promoted always so small, even
+when we are promoting 8 leaves?
+
+do we need to dump timings of when the main thread is
+waiting because merge need is desperate?
+
 hmmm.  maybe we had the necessary_tombstone() code backwards.
 consider NOT doing this check on merge from Fresh.  to make
 it faster.  merge from fresh is imply to reduce the segment
